# CUDAStudy

./: CMakeLists.txt
cmake/: FindOpencvWorld.cmake
source/: CMakeLists.txt
source/Lesson1HW/: CMakeLists.txt
source/Lesson1HW/include/: reference_calc.h  timer.h  utils.h
source/Lesson1HW/source/: color_to_grey.cu  cudaAdd.cu  main.cpp  reference_calc.cpp
source/Lesson2HW/: CMakeLists.txt
source/Lesson2HW/include/: utils.h
source/Lesson2HW/source/: image_blur.cu  image_blur2.cu
source/Lesson3HW/: CMakeLists.txt
source/Lesson3HW/include/: utils.h
source/Lesson3HW/source/: HW3.cu  histogram_equalization.cu  main.cpp
